--- a/style.css
+++ b/style.css
@@ -49,8 +49,12 @@ input {
 #operation{
     grid-area: plus;
     justify-self: center;
-    padding: 0 10px;
-    margin: 5px 0px;
+    padding: 0 7px;
+    margin: 5px 10px;
+    background-color: rgb(184, 184, 107);
+    /*border: 1px solid rgb(78, 78, 14);*/
+    color: rgb(78, 78, 14);
+    cursor: pointer;
 }
 
 #input2{
